--- a/webpack-install/package.json
+++ b/webpack-install/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack -d --devtool eval-source-map"
+    "build:scripts": "webpack",
+    "watch:scripts": "webpack -d --devtool eval-source-map -w"
   },
   "keywords": [],
   "author": "",
