--- a/webpack-plugins/package.json
+++ b/webpack-plugins/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --mode=development --devtool eval-source-map -w"
+    "build": "webpack -p",
+    "start": "webpack-dev-server --mode=development --devtool eval-source-map --open"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "style-loader": "^3.3.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2"
   }
 }
